# reba-tool

./: .gitignore  CLAUDE.md  IPHONE_MIGRATION_PLAN.md  README.md  pyproject.toml  start.bat
.claude/: settings.local.json
docs/: code.html  code_edit.html  reba-scoring-flow.md
src/reba_tool/: MediaPipeApp - raw.py  MediaPipeApp -table.py  MediaPipeApp.py  MediaPipeAppNO.py  angle_calculator.py  data_logger.py  event_bus.py  frame_renderer.py  passlib.py  processing_config.py  reba_scorer.py  video_controller.py  video_pipeline.py
src/reba_tool/ui/: __init__.py  main_window.py  qt_config.py  table_c_dialog.py  video_worker.py
src/reba_tool_qml/: __init__.py  main.py
src/reba_tool_qml/bridge/: image_provider.py  table_c_model.py  video_bridge.py  video_recorder.py
src/reba_tool_qml/config/: theme_dark.json  theme_default.json  theme_high_contrast.json  theme_neon_navy.json
src/reba_tool_qml/qml/: main.qml
src/reba_tool_qml/qml/components/: ControlBar.qml  DisplayOptions.qml  LogPanel.qml  ProgressSlider.qml  StatsPanel.qml  VideoDisplay.qml
src/reba_tool_qml/qml/panels/: LeftPanel.qml  ParameterPanel.qml  RebaScorePanel.qml  RightPanel.qml  ScoreDetailTable.qml  TableCDialog.qml
src/reba_tool_qml/qml/style/: Theme.qml  qmldir
src/reba_tool_qml_code/: main.py
src/reba_tool_qml_code/bridge/: __init__.py  data_bridge.py  reba_bridge.py  score_table_model.py  settings_bridge.py  table_c_model.py  video_bridge.py  video_recorder.py
src/reba_tool_qml_code/config/: theme_dark_neon.json
src/reba_tool_qml_code/qml/: main.qml
(+9 files in other folders)
