[project]
dependencies = [
  "black==25.12.0",
  "flake8>=7.3.0",
  "matplotlib>=3.7.0",
  "mediapipe==0.10.21",
  "numpy==1.26.4",
  "opencv-python>=4.8.0",
  "pandas>=2.0.0",
  "pyside6>=6.6.0",
  "pytest>=7.4.0",
  "scikit-learn>=1.3.0",
  "scipy>=1.11.0",
]
description = "Add your description here"
name = "reba-tool"
readme = "README.md"
requires-python = ">=3.11"
version = "1.1.0"
